Fix bottom chart layout to remove scrollbar

--- a/src/app/charts/line-chart/line-chart.component.css
+++ b/src/app/charts/line-chart/line-chart.component.css
@@ -1,3 +1,3 @@
 .chart {
-  height: 40vh;
+  height: 38vh;
 }
